todo active counter alive

--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
   <h1>TodoMVC</h1>
   <input id="add-todo-input" type="text" placeholder="Add todo..." />
   <ul id="todo-list"></ul>
-  <div>
+  <!-- <div>
     <button id="all-button">All</button>
     <button id="active-button">Active</button>
     <button id="completed-button">Completed</button>
-  </div>
+  </div> -->
+  <footer>
+    <span id="todo-counter"></span>
+    <button id="all-button">All</button>
+    <button id="active-button">Active</button>
+    <button id="completed-button">Completed</button>
+    <button id="clear-completed">Clear Completed</button>
+  </footer>
 
   <script src="./dist/bundle.js"></script>
 </body>
