footer hide/show automatically

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button id="active-button">Active</button>
     <button id="completed-button">Completed</button>
   </div> -->
-  <footer>
+  <footer class="footer" id="footer">
     <span id="todo-counter"></span>
     <button id="all-button">All</button>
     <button id="active-button">Active</button>
