--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button id="all-button">All</button>
     <button id="active-button">Active</button>
     <button id="completed-button">Completed</button>
-    <button id="clear-completed">Clear Completed</button>
+    <button id="clear-completed-button">Clear Completed</button>
   </footer>
 
   <script src="./dist/bundle.js"></script>
