--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>TodoMVC</h1>
+  <input id="toggle-all-checkbox" type="checkbox" />
   <input id="add-todo-input" type="text" placeholder="Add todo..." />
   <ul id="todo-list"></ul>
   <!-- <div>
